# samplesurium

./: .gitignore  .nojekyll  FUCKP5  README.md  _brand.yml  _quarto.yml  _quarto_internal_scss_error.scss  about.html  angular.json  index.html  index.qmd  index.xml  listings.json  package-lock.json  package.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.scss
posts/ProLogiQA/: .gitignore  index.qmd  pyproject.toml
posts/ProLogiQA/ProLogiQA/: data.py  oneshot.py  plot.py
posts/demo/: data.csv  demo.html  demo.qmd  references.bib
posts/post-with-code/: index.html
posts/welcome/: index.html  index.qmd
site_libs/bootstrap/: bootstrap-73775a6538e80b9402eb0bac9ccf89b4.min.css  bootstrap-dark-206a37d9207b37604d1552f70b6c854d.min.css
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  code.store.ts  component.service.ts  example.service.ts  explanation.service.ts  explanation.store.ts  sketch.service.ts  sketch.store.ts  thread.js
src/app/about/: about.component.css  about.component.html  about.component.ts
src/app/art/: art.component.css  art.component.html  art.component.ts
src/app/detail/: detail-routing.module.ts  detail.component.css  detail.component.html  detail.component.ts  detail.module.ts
src/app/header/: header.component.css  header.component.html
src/app/interfaces/: briefexample.ts  fullexample.ts  topic.ts
src/assets/: classification.ts  overview.json  pong.ts  regression.ts  sample.ts  tensors.ts  tic-tac-toe.ts
src/assets/art/: space.ts  (+5 more)
(+28 files in other folders)
